# advent-of-code

./: README.md  data.scala  day1.scala  day11.scala  day13.scala  day15.scala  day16.scala  day17.scala  day19.scala  day3.scala  day4.scala  day9.scala
2019/: Day 1.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 14.ipynb  Day 16.ipynb  Day 17.ipynb  Day 2.ipynb  Day 3.ipynb  Day 4.ipynb  Day 5.ipynb  Day 6.ipynb  Day 7.ipynb  Day 8.ipynb  Day 9.ipynb  day_13.py  intcode.py  tools.py
2020/: TODO  data.scala  day1.scala  day10.scala  day11.scala  day12.scala  day13.scala  day14.scala  day15.scala  day16.scala  day17.scala  day18.scala  day19.scala  day2.scala  day20.scala  day21.scala  day22.scala  day23.scala  day24.scala  day25.scala  day3.scala  day4.scala  day5.scala  day6.scala  day7.scala  day8.scala  day9.scala
2021/: README.md  day10.scala  day12.scala  day14.scala  day18.scala  day2.scala  day20.scala  day21.scala  day22.scala  day5.scala  day6.scala  day7.scala  day8.scala
2022/: .gitignore  Cargo.toml
2022/src/: aoc_client.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07_stateless.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day20.rs  day21.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2023/: aoc_client.mojo
2023/repros/: 1.mojo
2023/steflib/: _python_socket.mojo  dict.mojo  hash.mojo  optional.mojo  socket.mojo  variant.mojo
updates/: day21.scala
