[package]
name = "advent-of-code-2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
lazy_static = "1.4.0"